# epidemic-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.db  epidemic.cpp  epidemic.hpp  event_drivers.hpp  generate_bbox.py  plague.cpp  plague.hpp  plot.py  run-jobs.sh  run.py  setup.hpp
chisel/: flash_mem.scala
data/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+2016 more)
docs/: data_flow.drawio  modules.drawio  proof.py
docs/diagrams/: data_flow.drawio  exec.drawio  modules.drawio  wave.json
docs/media/: data_flow_high.drawio  data_flow_low.drawio  modules.drawio
docs/proof/: original.py  proof.py
stats/: agg.py  data.db  ingest.py  jsontosqlite.py  parsemem.py  pending.txt  plot.html  plot.py  run-jobs-stats.sh  run-jobs.sh  stats.py
systemc/: mul_inv.hpp  rng.hpp  sc_floor.hpp  sc_mul.hpp
test/: test.py
verilog/: flash_mem.v
